Saleasforce/Apex-Assignment3/src/objects/Assignment2__c.object
<CustomObject>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Date__c</fullName>
        <label>Custom Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mix_Pct__c</fullName>
        <label>Mix Pct</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MultipleOfFive__c</fullName>
        <label>MultipleOfFive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Assignment2</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assignment2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignment2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CreditCardNumberValidation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( REGEX( Credit_Card_Number__c , &quot;(((\\d{4}-){3}\\d{4})|\\d{16})?&quot;))</errorConditionFormula>
        <errorDisplayField>Credit_Card_Number__c</errorDisplayField>
        <errorMessage>Credit Card Number must be in this format: 9999-9999-9999-9999 or 9999999999999999</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CustomDateValidation</fullName>
        <active>true</active>
        <errorConditionFormula>CASE(MOD(  Custom_Date__c  - DATE(1900, 1, 7), 7),
0, 0,
6, 0,
1) = 0</errorConditionFormula>
        <errorDisplayField>Custom_Date__c</errorDisplayField>
        <errorMessage>Date must be a weekday</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MixPctRule</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
    Mix_Pct__c &gt; 1.0,
   Mix_Pct__c &lt; 0.0
)</errorConditionFormula>
        <errorDisplayField>Mix_Pct__c</errorDisplayField>
        <errorMessage>Mix Pct must be between 0 and 100%.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MultipleOfFiveValidation</fullName>
        <active>true</active>
        <errorConditionFormula>MOD(  MultipleOfFive__c , 5) &lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>MultipleOfFive__c</errorDisplayField>
        <errorMessage>Number must be multiple of 5</errorMessage>
    </validationRules>
</CustomObject>